src/static/styles/workshopmobile.css
.card{
  display: flex; min-width: 300px; min-height: 250px; width: calc(100% - 100px); height: auto; border: 0px solid #ECECEC;
  box-sizing: border-box;
  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
  border-radius: 5px;
  margin-left: 40px;
  margin-right: 60px;
  margin-bottom: 30px;
  padding: 15px;
}

.toprow{
display: flex; flex-direction: row; height: 40%; width: auto; padding-bottom: 10px; margin-right: 0px; margin-left: 0px;
}

.largedate{
  display: flex; flex-direction: column; min-width: 20%; width: 20%; height: auto; align-items: center;
}

.smallinfo{
display: flex; flex-direction: column; min-width: 80%; width: 80%; height: auto; margin-left: 10px;
}

.workshoptitle{
font-weight: 600; font-size: 22px; margin-bottom: 5px;
}

.location{
color: rgba(112, 112, 112, 0.9);
}

.bottomrow{
display: flex; flex-direction: row; height: auto; width: auto; padding: 0px; justify-content: center; margin-right: 0px; margin-left: 0px;
}

.rsvp{
  display: flex; flex-direction: column; width: 20%; height: 100%; align-items: center; margin-top: 5px;
}

.workshopdesc{
  display: flex; flex-direction: column; width: 80%; height: 100%; margin-left: 10px;
}

.workshopdiv{
  width: 100%; min-width: 100%; background-color: white; align-items: center; padding-top: 60px;
  margin-bottom: 0px; padding-bottom: 10px; padding-right: 0px; padding-left: 0px;
}

.titlediv{
  position: relative; width: 100%; background-color: white; padding: 30px; padding-left: 40px; overflow: hidden; height: auto;
}

.overflow-auto {
  overflow: hidden !important;
}

.ws-page-title {
  position: relative;
  top: auto;
  left: auto;
  padding-top: 20px;
  padding-bottom: 10px;
}

.ws-page-desc {
  position: relative;
  top: auto;
  left: auto;
  height: auto;
  width: calc(100% - 80px);
  padding-bottom: 10px;
}

.ws-page-form {
  position: relative;
  top: auto;
  left: auto;
  width: calc(100% - 80px);
  padding-bottom: 40px;
}

.overallcontainer{
  display: inline-block; position: relative; width: 100vw; margin: 0px; padding-bottom: 0px;
  overflow: hidden; height: auto;
}

.ws-graphic {
  display: none;
}

